--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -155,3 +155,6 @@ table#report_list .report_action {
 }h3 {
     font-size: larger;
 }
+pre {
+    font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+}
